Continue work on new game modes and refactor ScoreDetails()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -245,16 +245,19 @@
     <string name="game_unpause">Unpause game</string>
     <string name="game_score_details_title">Score details</string>
     <string name="game_score_details_overview">Overview</string>
-    <string name="game_score_details_correct_title">Correct answers:</string>
+    <string name="game_score_details_correct_title">Correct answers:\ </string>
     <string name="game_score_details_correct_absolute">%d/%d</string>
-    <string name="game_score_details_categories_title">Categories:</string>
-    <string name="game_score_details_time_mode">Time mode:</string>
+    <string name="game_score_details_categories_title">Categories:\ </string>
+    <string name="game_score_details_answer_mode">Answer mode:\ </string>
+    <string name="game_score_details_difficulty_mode">Difficulty mode:\ </string>
+    <string name="game_score_details_time_mode">Time mode:\ </string>
     <string name="game_score_details_time">%dm %02ds</string>
     <string name="game_score_details_time_date_connector">,\ </string>
     <string name="game_score_details_guessed">Guessed (%d)</string>
     <string name="game_score_details_skipped_guessed">Skipped, guessed (%d)</string>
     <string name="game_score_details_skipped">Skipped, not guessed (%d)</string>
     <string name="game_score_details_shown">Shown (%d)</string>
+    <string name="game_score_details_failed">Failed (%d)</string>
     <string name="game_score_details_remainder">Remaining (%d)</string>
     <string name="game_time_trial_title">Time trial</string>
     <string name="game_time_trial_input_placeholder">00</string>
