Update game over and share score strings, fix bugs in reset game system when time trial, make category deselection pause game (like with selection)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,16 +239,16 @@
     <string name="game_modes_dialog_answer_mode_title">Answer mode:</string>
     <string name="game_modes_dialog_difficulty_mode_title">Guess limit:</string>
     <string name="game_over_title">Game over</string>
-    <string name="game_over_text">Flags guessed: %d/%d</string>
-    <string name="game_over_text_max_score">You guessed every flag…\nNerd!</string>
-    <string name="game_over_text_min_score">A dunce cap is coming your way</string>
+    <string name="game_over_text_names">Flag names guessed: %d/%d</string>
+    <string name="game_over_text_dates">Flag dates guessed: %d/%d</string>
+    <string name="game_over_text_min_score">No correct answers, try again?</string>
     <string name="game_over_details_button">Details</string>
     <string name="game_over_score_history_button">History</string>
     <string name="game_over_share_button">Share</string>
     <string name="game_over_exit_button">Exit</string>
     <string name="game_over_replay_button">Replay</string>
-    <string name="game_over_share_subject">Flag game score</string>
-    <string name="game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app from https://github.com/aftly/Flags and see if you can beat me…</string>
+    <string name="game_over_share_subject">Game score</string>
+    <string name="game_over_share_text">Flags game: https://github.com/aftly/Flags\nMy score: %s/%s\nCategory: %s\nMode: %s</string>
     <string name="game_paused">Game paused</string>
     <string name="game_unpause">Unpause game</string>
     <string name="game_score_details_title">Score details</string>
