Update flag categories and strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,8 @@
     <string name="category_region_string">region</string>
     <string name="category_republic_unit_title">Republic</string>
     <string name="category_republic_unit_string">republic</string>
+    <string name="category_riding_unit_title">Riding</string>
+    <string name="category_riding_unit_string">riding</string>
     <string name="category_state_title">State</string>
     <string name="category_state_string">state</string>
     <string name="category_territory_title">Territory</string>
@@ -112,6 +114,8 @@
     <string name="category_international_organization_title">International Organization</string>
     <string name="category_international_organization_string">international organization</string>
     <string name="category_international_organization_in_description">n international organization</string>
+    <string name="category_unicameral_title">Unicameral</string>
+    <string name="category_unicameral_string">unicameral</string>
     <string name="category_lower_house_title">Lower House</string>
     <string name="category_lower_house_string">lower house</string>
     <string name="category_upper_house_title">Upper House</string>
@@ -120,6 +124,24 @@
     <string name="category_parliament_string">parliament</string>
     <string name="category_congress_title">Congress</string>
     <string name="category_congress_string">congress</string>
+    <string name="category_assembly_title">Assembly</string>
+    <string name="category_assembly_string">assembly</string>
+    <string name="category_department_title">Department</string>
+    <string name="category_department_string">department</string>
+    <string name="category_military_title">Military</string>
+    <string name="category_military_string">military</string>
+    <string name="category_police_title">Police</string>
+    <string name="category_police_string">police</string>
+    <string name="category_university_title">University</string>
+    <string name="category_university_string">university</string>
+    <string name="category_charity_title">Charity</string>
+    <string name="category_charity_string">charity</string>
+    <string name="category_maritime_title">Maritime</string>
+    <string name="category_maritime_string">maritime</string>
+    <string name="category_regional_title">Geographical Region</string>
+    <string name="category_regional_string">geographical region</string>
+    <string name="category_vexillology_title">Vexillology</string>
+    <string name="category_vexillology_string">vexillology</string>
     <string name="category_unitary_title">Unitary</string>
     <string name="category_unitary_string">unitary</string>
     <string name="category_federal_title">Federal</string>
@@ -193,8 +215,6 @@
     <string name="category_religious_title">Religious</string>
     <string name="category_religious_string">religious</string>
     <string name="category_religious_in_description">religious entity</string>
-    <string name="category_regional_title">Geographical Region</string>
-    <string name="category_regional_string">geographical region</string>
     <string name="category_historical_title">Historical</string>
     <string name="category_historical_string">historical</string>
     <string name="categories_associated_country">Associated Country</string>
