correct invalid string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2310,7 +2310,7 @@
     <string name="hirshabelle_official">Hirshabelle State of Somalia</string>
     <string name="hirshabelle_wikipedia_url_path">Hirshabelle</string>
     <string name="his_majestys_naval_service">Royal Navy</string>
-    <string name="his_majestys_naval_service_official">His Majesty's Naval Service</string>
+    <string name="his_majestys_naval_service_official">His Majesty\'s Naval Service</string>
     <string name="his_majestys_naval_service_wikipedia_url_path">His_Majesty%27s_Naval_Service</string>
     <string name="holy_roman_empire">Holy Roman Empire</string>
     <string name="holy_roman_empire_official">Holy Roman Empire of the German Nation</string>
