--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3179,7 +3179,7 @@
     <string name="malaga_province_alt_2">Malaga Province</string>
     <string name="malaga_province_alt_3">Province of Malaga</string>
     <string name="malawi">Malawi</string>
-    <string name="malawi_official">Republic of Malawi,</string>
+    <string name="malawi_official">Republic of Malawi</string>
     <string name="malawi_wikipedia_url_path">Malawi</string>
     <string name="malawi_alt_1">Republic of Malawi</string>
     <string name="malawi_alt_2">mw</string>
