initial submenu for Institution in categories menu (proper TODO)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,18 @@
     <string name="category_super_institution_menu_button">Institution</string>
     <string name="category_super_institution_score_preview">Institution</string>
     <string name="category_super_institution_score_detailed">Institution</string>
+    <string name="category_super_legislature">Legislature</string>
+    <string name="category_super_legislature_menu_button">Legislature</string>
+    <string name="category_super_legislature_score_preview">Legislature</string>
+    <string name="category_super_legislature_score_detailed">Legislature</string>
+    <string name="category_super_executive">Executive</string>
+    <string name="category_super_executive_menu_button">Executive</string>
+    <string name="category_super_executive_score_preview">Executive</string>
+    <string name="category_super_executive_score_detailed">Executive</string>
+    <string name="category_super_civilian">Civilian</string>
+    <string name="category_super_civilian_menu_button">Civilian</string>
+    <string name="category_super_civilian_score_preview">Civilian</string>
+    <string name="category_super_civilian_score_detailed">Civilian</string>
     <string name="category_super_cultural">Cultural</string>
     <string name="category_super_cultural_menu_button">Cultural</string>
     <string name="category_super_cultural_score_preview">Cultural</string>
