In updateCurrentCategories() [for category selections in category menu]: Add mutually exclusive categories and category switch logic for new Institution subcategories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="category_super_legislature_menu_button">Legislature</string>
     <string name="category_super_legislature_score_preview">Legislature</string>
     <string name="category_super_legislature_score_detailed">Legislature</string>
+    <string name="category_super_legislature_division">Legislature Division</string>
+    <string name="category_super_legislature_body">Legislature Body</string>
     <string name="category_super_executive">Executive</string>
     <string name="category_super_executive_menu_button">Executive</string>
     <string name="category_super_executive_score_preview">Executive</string>
