--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,8 @@
     <string name="category_province_string">province</string>
     <string name="category_region_title">Region</string>
     <string name="category_region_string">region</string>
+    <string name="category_regional_title">Geographical Region</string>
+    <string name="category_regional_string">geographical region</string>
     <string name="category_republic_unit_title">Republic</string>
     <string name="category_republic_unit_string">republic</string>
     <string name="category_riding_unit_title">Riding</string>
@@ -131,7 +133,9 @@
     <string name="category_supranational_union_string">supranational union</string>
     <string name="category_international_organization_title">International Organization</string>
     <string name="category_international_organization_string">international organization</string>
+    <string name="category_international_organization_string_short">international</string>
     <string name="category_international_organization_in_description">n international organization</string>
+    <string name="category_international_organization_in_description_short">n international</string>
     <string name="category_unicameral_title">Unicameral</string>
     <string name="category_unicameral_string">unicameral</string>
     <string name="category_lower_house_title">Lower House</string>
@@ -156,14 +160,15 @@
     <string name="category_university_string">university</string>
     <string name="category_charity_title">Charity</string>
     <string name="category_charity_string">charity</string>
-    <string name="category_maritime_title">Maritime</string>
-    <string name="category_maritime_string">maritime</string>
-    <string name="category_regional_title">Geographical Region</string>
-    <string name="category_regional_string">geographical region</string>
+    <string name="category_religious_title">Religious</string>
+    <string name="category_religious_string">religious</string>
+    <string name="category_religious_in_description">religious institution</string>
     <string name="category_vexillology_title">Vexillology</string>
     <string name="category_vexillology_string">vexillology</string>
     <string name="category_vexillology_category_button_title">Vexillological Institution</string>
     <string name="category_vexillology_description_title">Vexillological</string>
+    <string name="category_maritime_title">Maritime</string>
+    <string name="category_maritime_string">maritime</string>
     <string name="category_unitary_title">Unitary</string>
     <string name="category_unitary_string">unitary</string>
     <string name="category_federal_title">Federal</string>
@@ -234,9 +239,6 @@
     <string name="category_political_title">Political</string>
     <string name="category_political_string">political</string>
     <string name="category_political_in_description">political movement</string>
-    <string name="category_religious_title">Religious</string>
-    <string name="category_religious_string">religious</string>
-    <string name="category_religious_in_description">religious entity</string>
     <string name="category_historical_title">Historical</string>
     <string name="category_historical_string">historical</string>
     <string name="categories_associated_country">Associated Country</string>
