modularize parent and sov description and apply new concise format to Polity description. Update met pol info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3345,7 +3345,7 @@
     <string name="merioneth_alt_1">County of Merioneth</string>
     <string name="merioneth_alt_2">Merioneth</string>
     <string name="metropolitan_police">Metropolitan Police</string>
-    <string name="metropolitan_police_official">Metropolitan Police</string>
+    <string name="metropolitan_police_official">Metropolitan Police Service</string>
     <string name="metropolitan_police_wikipedia_url_path">Metropolitan_Police</string>
     <string name="metropolitan_police_alt_1">MPS</string>
     <string name="metropolitan_police_alt_2">the Met</string>
