--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -333,9 +333,10 @@
     <string name="menu_related_flags_political_short">Pol</string>
     <string name="menu_related_flags_chronological">Chronologically Related</string>
     <string name="menu_related_flags_chronological_short">Chron</string>
+    <string name="menu_related_flags_chronological_historical_flags">Historical Flags</string>
     <string name="menu_related_flags_chronological_latest">Latest Administration(s)</string>
     <string name="menu_related_flags_chronological_previous">Previous Administrations</string>
-    <string name="menu_related_flags_chronological_historical">Historical Flags</string>
+    <string name="menu_related_flags_chronological_historical_units">Historical Units</string>
     <string name="menu_related_flags_chronological_previous_of_sovereign">Previous Admins of Sovereign</string>
     <string name="menu_related_flags_chronological_dependents_of_latest">Dependents of Latest Admin(s)</string>
     <string name="menu_multiple_selection">Multiple Categories Selected</string>
