Improve display of historic units when selected in Chron menu. Include it's non-historical parent/sov as Latest Entity for consistent 'Historical Units (of Latest)' category title. Also implement variations of LATEST_ENTITIES RelatedFlagsMenu category depending on latestEntities size and polity status for more accurate titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,9 +334,12 @@
     <string name="menu_related_flags_chronological">Chronologically Related</string>
     <string name="menu_related_flags_chronological_short">Chron</string>
     <string name="menu_related_flags_chronological_historical_flags">Historical Flags</string>
-    <string name="menu_related_flags_chronological_latest">Latest Administration(s)</string>
-    <string name="menu_related_flags_chronological_previous">Previous Administrations</string>
-    <string name="menu_related_flags_chronological_historical_units">Historical Units</string>
+    <string name="menu_related_flags_chronological_latest_polities">Latest Administrations</string>
+    <string name="menu_related_flags_chronological_latest_polity">Latest Administration</string>
+    <string name="menu_related_flags_chronological_latest_non_polity">Latest Entity</string>
+    <string name="menu_related_flags_chronological_previous_polity">Previous Administrations</string>
+    <string name="menu_related_flags_chronological_previous_non_polity">Previous Entities</string>
+    <string name="menu_related_flags_chronological_historical_units">Historical Units (of Latest)</string>
     <string name="menu_related_flags_chronological_previous_of_sovereign">Previous Admins of Sovereign</string>
     <string name="menu_related_flags_chronological_dependents_of_latest">Dependents of Latest Admin(s)</string>
     <string name="menu_multiple_selection">Multiple Categories Selected</string>
