Fix crash in Chron rel menu from conflicting historic units and ad hoc latest such as when historic units are parents/children of each other. Exclude the children of historic units from historic units to also maintain structure consistency with other selected parent units. Update strings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,6 +340,7 @@
     <string name="menu_related_flags_chronological_previous_polity">Previous Administrations</string>
     <string name="menu_related_flags_chronological_previous_non_polity">Previous Entities</string>
     <string name="menu_related_flags_chronological_historical_units">Historical Units (of Latest)</string>
+    <string name="menu_related_flags_chronological_historical_unit_selected">(Selected) Historical Unit of Latest</string>
     <string name="menu_related_flags_chronological_previous_of_sovereign">Previous Admins of Sovereign</string>
     <string name="menu_related_flags_chronological_dependents_of_latest">Dependents of Latest Admin(s)</string>
     <string name="menu_multiple_selection">Multiple Categories Selected</string>
