Add ANNEXED_TERRITORY to AutonomousRegion super and update annexed flag data for better model consistency

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1606,6 +1606,21 @@
     <string name="crimea_alt_9">Taurica</string>
     <string name="crimea_alt_10">Kimmeria</string>
     <string name="crimea_alt_11">Cimmeria</string>
+    <string name="crimea_russia">Crimea</string>
+    <string name="crimea_russia_descriptor">(Russia)</string>
+    <string name="crimea_russia_official">Republic of Crimea</string>
+    <string name="crimea_russia_wikipedia_url_path">Republic_of_Crimea_(Russia)</string>
+    <string name="crimea_russia_alt_1">Kirim</string>
+    <string name="crimea_russia_alt_2">Qırım</string>
+    <string name="crimea_russia_alt_3">Kimmería</string>
+    <string name="crimea_russia_alt_4">Taurikḗ</string>
+    <string name="crimea_russia_alt_5">Crimean Peninsula</string>
+    <string name="crimea_russia_alt_6">Crim.</string>
+    <string name="crimea_russia_alt_7">Crimean P.</string>
+    <string name="crimea_russia_alt_8">Taurike</string>
+    <string name="crimea_russia_alt_9">Taurica</string>
+    <string name="crimea_russia_alt_10">Kimmeria</string>
+    <string name="crimea_russia_alt_11">Cimmeria</string>
     <string name="croatia">Croatia</string>
     <string name="croatia_official">Republic of Croatia</string>
     <string name="croatia_wikipedia_url_path">Croatia</string>
